# Gamazons

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in-bak  configure.scan  gamazons.glade  gamazons.gladep.bak
pixmaps/: Makefile  Makefile.am  Makefile.in  aaron.theme  aaron2.theme  default.theme  gamazons.desktop  plain.theme
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  Makefile.save  amazons.c  amazons.h  board.c  board.h  bstate.c  bstate.h  bugs  callbacks.c  callbacks.h  docs  eval.c  gamazon.bugs  gamazons.html  gutils.c  interface.c  interface.h  main-boarddrawn.c  main.c  moves.c  networking.txt  thots  unit-test.c  unit-test.h
