## Process this file with automake to produce Makefile.in

#INCLUDES = \
#	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
#	-DPACKAGE_LOCALE_DIR=\""$(datadir)/locale"\" \
#	@PACKAGE_CFLAGS@



gamazonsbitmapsdir = $(datadir)/pixmaps/gamazons
gamazons_BITMAPS = 	a_black.png \
			a_black_square.png \
			a_grey_square.png \
			a_white.png \
			a_white_square.png \
			b_black.png \
			b_black_square.png \
			b_grey_square.png \
			black.png \
			black_square.png \
			b_white.png \
			b_white_square.png \
			charcoal_square.png \
			grey_square.png \
			purple.png \
			purple2.png \
			gold.png \
			white.png \
			pearl.png \
			white_square.png 

gamazonsbitmaps_DATA = $(gamazons_BITMAPS)

gamazonsthemesdir = $(datadir)/gamazons
gamazons_THEMES = aaron2.theme  default.theme  aaron.theme  plain.theme
gamazonsthemes_DATA = $(gamazons_THEMES)

gamazonsicondir = $(datadir)/pixmaps
gamazonsdesktopdir = $(datadir)/applications

gamazons_ICON = gnome-gamazons.png
gamazons_DESKTOP = gamazons.desktop

gamazonsicon_DATA = $(gamazons_ICON)
gamazonsdesktop_DATA = $(gamazons_DESKTOP)
EXTRA_DIST = $(gamazonsbitmaps_DATA) $(gamazonsthemes_DATA) $(gamazonsicon_DATA) $(gamazonsdesktop_DATA)

